// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AlertLink renders 1`] = `
<Component
  className="css-19kzmmy-AlertLink css-dvd7d22"
  to="/settings/accounts/notifications"
>
  This is an external link button
</Component>
`;

exports[`AlertLink renders with icon 1`] = `
<Component
  className="css-19kzmmy-AlertLink css-dvd7d22"
  icon="icon-mail"
  to="/settings/accounts/notifications"
>
  This is an external link button
</Component>
`;
